@@ -1,8 +1,9 @@
-bin_PROGRAMS = benchmark
+EXTRA_DIST=ASNPerson.asn
+noinst_PROGRAMS = benchmark
 
 headers = Benchmark.hpp
 
-sources = main.cpp ASNPerson.C # Generated by snacc
+sources = ASNPerson.C main.cpp
 
 benchmark_SOURCES = $(headers) $(sources)
 
@@ -12,9 +13,13 @@ benchmark_CPPFLAGS = $(DEPS_CFLAGS) -I/usr/include/snacc/c++/ -DUSE_EXP_BUF
 # snacc-config --language=C++ --libs ebuf
 benchmark_LDADD = $(DEPS_LIBS) /usr/lib/libmongoclient.a -lboost_system -lboost_filesystem -lboost_thread -lboost_serialization -lasn1c++
 
-asn:
+ASNPerson.C: ASNPerson.asn
 	snacc -C -u /usr/include/snacc/asn1/asn-useful.asn1 ASNPerson.asn
-	snacc -C -u /usr/include/snacc/asn1/asn-useful.asn1 RainbruRPG.asn
 
-clean-local:
-	rm -fr ASNPerson.C ASNPerson.h
+
+asn: all
+	snacc -C -u /usr/include/snacc/asn1/asn-useful.asn1 ASNPerson.asn
+
+
+CLEANFILES= ASNPerson.C ASNPerson.h
+
